--- a/package.json
+++ b/package.json
@@ -10,8 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "core-js": "^3.40.0",
+    "expo": "^52.0.17",
+    "glob": "^11.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.2",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-radio-buttons-group": "^3.1.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
