--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/drawer": "^7.1.1",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.4.8",
+    "axios": "^1.6.2",
     "core-js": "^3.40.0",
     "expo": "^52.0.17",
     "glob": "^11.0.0",
@@ -22,8 +25,10 @@
     "react-native": "0.76.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-element-dropdown": "^2.12.2",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-image-picker": "^7.2.3",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modal-datetime-picker": "^18.0.0",
@@ -33,7 +38,9 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^3.9.1",
-    "rimraf": "^6.0.1"
+    "react-native-vector-icons": "^10.3.0",
+    "rimraf": "^6.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
